hphp/test/slow/traits/diamond_use/diamond_use4.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T, T1, T2) in %s/diamond_use4.php on line 18
